@@ -312,6 +312,7 @@ if __name__=='pymol.cmd':
         map_sc = lambda sc=Shortcut,gnot=get_names_of_type:sc(gnot('object:map'))
         contour_sc =  lambda sc=Shortcut,gnot=get_names_of_type:sc(
             gnot('object:mesh')+gnot('object:surface'))
+        group_sc = lambda sc=Shortcut,gnot=get_names_of_type:sc(gnot('object:group'))
         
         # Table for argument autocompletion
 
