@@ -32,6 +32,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'full_screen'    : [ self_cmd.toggle_sc              , 'option'          , ''   ],
         'get'            : [ self_cmd.setting.setting_sc     , 'setting'         , ', ' ],
         'gradient'       : [ self_cmd.object_sc              , 'gradient'        , ', ' ],
+        'group'          : [ self_cmd.group_sc               , 'group object'    , ', ' ],
         'help'           : [ self_cmd.help_sc                , 'selection'       , ''   ],
         'hide'           : [ self_cmd.repres_sc              , 'representation'  , ', ' ],
         'isolevel'       : [ self_cmd.contour_sc             , 'contour'         , ', ' ],
@@ -92,8 +93,9 @@ def get_auto_arg_list(self_cmd=cmd):
         'extract'        : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'feedback'       : [ self_cmd.fb_module_sc           , 'module'          , ', ' ],
         'flag'           : [ self_cmd.selection_sc           , 'selection'       , ', ' ],   
-        'gradient'       : [ self_cmd.map_sc                 , 'map object'      , ', ' ],
         'get'            : [ self_cmd.object_sc              , 'object'          , ', ' ],
+        'gradient'       : [ self_cmd.map_sc                 , 'map object'      , ', ' ],
+        'group'          : [ self_cmd.object_sc              , 'object'          , ', ' ],
         'hide'           : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'isomesh'        : [ self_cmd.map_sc                 , 'map object'      , ', ' ],
         'isosurface'     : [ self_cmd.map_sc                 , 'map object'      , ', ' ],
@@ -130,6 +132,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'distance'       : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'feedback'       : [ self_cmd.fb_mask_sc             , 'mask'            , ''   ],            
         'flag'           : [ self_cmd.editing.flag_action_sc , 'flag action'     , ''   ],
+        'group'          : [ self_cmd.creating.group_action_sc, 'group action'    , ''   ],
         'map_set'        : [ self_cmd.map_sc                 , 'map'             , ' '  ],
         'order'          : [ self_cmd.controlling.location_sc, 'location'        , ', ' ],
         'set'            : [ self_cmd.selection_sc           , 'selection'       , ', ' ],
